--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
+    "@testing-library/user-event": "^12.5.0",
     "classnames": "^2.2.6",
     "husky": "^4.3.0",
     "lint-staged": "^10.5.1",
@@ -21,6 +24,8 @@
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "test": "react-scripts test",
+    "test:coverage": "react-scripts test --coverage --watchAll",
     "eject": "react-scripts eject",
     "lint-js": "eslint src/**/*.js src/**/*.jsx --fix",
     "lint-css": "stylelint src/**/*.css src/**/*.scss --fix",
@@ -33,12 +38,10 @@
   },
   "lint-staged": {
     "*.{css,scss}": [
-      "stylelint",
-      "git add"
+      "stylelint"
     ],
     "*.{js,jsx}": [
-      "eslint",
-      "git add"
+      "eslint"
     ]
   },
   "browserslist": {
@@ -66,7 +69,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged",
+      "pre-push": "npm run test"
     }
   }
 }
